# catdetector

./: CMakeLists.txt  Dockerfile  README.md  catdetector_script.sh  notlar.txt
scripts/: linux-install.sh
src/: ObjectDetection.cpp  camera_manager.cpp  camera_manager.h  catdetector.cpp  objectdetection.cpp  objectdetection.h  objectdetection_rcnn.cpp  objectdetection_yolo.cpp  objectdetection_yolo.h  videotwig.cpp
src/database/: watch_mysql.cpp
src/kafka/: kafkaproducer.cpp  kafkaproducer.h
